ansible/k8s-cluster/files/awx-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
spec:
  ingressClassName: nginx
  rules:
    - host: awx.example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: awx-service
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - awx.example.com
      secretName: awx-tls-selfsigned
